Delete added and connect flash fixed

--- a/views/admin/add_page.ejs
+++ b/views/admin/add_page.ejs
@@ -18,7 +18,7 @@
 
     <div class = 'mb-3'>
         <label for = '' class = 'form-level'>Content</label>
-        <textarea name="content" class='form-control' rows="4" placeholder="Content"><%= content %></textarea>
+        <textarea name="content" class='form-control' id="ck" rows="6" placeholder="Content"><%= content %></textarea>
     </div>
 
     <input type="hidden" name="sorting" value="100">
