--- a/views/admin/edit_page.ejs
+++ b/views/admin/edit_page.ejs
@@ -23,7 +23,7 @@
 
     <div class = 'mb-3'>
         <label for = '' class = 'form-level'>Content</label>
-        <textarea name="content" class='form-control' rows="4" placeholder="Content"><%= page.content %></textarea>
+        <textarea name="content" class='form-control' id="ck" cols="10" rows="4" placeholder="Content"><%= page.content %></textarea>
     </div>
 
     <input type="hidden" name="id" value="<%= page.id %>">
