--- a/views/admin/pages.ejs
+++ b/views/admin/pages.ejs
@@ -20,7 +20,7 @@
             <% if(page.slug === 'home') { %>
             <td></td>
             <% } else { %>
-            <td><a href="/admin/pages/delete-page/<%= page._id %>">Delete</a></td>
+            <td><a href="/admin/pages/delete-page/<%= page._id %>" onclick="return confirm('Are you sure?')">Delete</a></td>
             <% } %>
         </tr>
         <% }); %>
