Bug fixed and category funtionality added

--- a/views/_layouts/adminheader.ejs
+++ b/views/_layouts/adminheader.ejs
@@ -21,7 +21,7 @@
   
         <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
           <li><a href="/admin/pages" class="nav-link px-2 text-white">Pages</a></li>
-          <li><a href="#" class="nav-link px-2 text-white">Pricing</a></li>
+          <li><a href="/admin/categories" class="nav-link px-2 text-white">Categories</a></li>
           <li><a href="#" class="nav-link px-2 text-white">FAQs</a></li>
           <li><a href="#" class="nav-link px-2 text-white">About</a></li>
         </ul>
