--- a/views/_layouts/header.ejs
+++ b/views/_layouts/header.ejs
@@ -4,10 +4,12 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+
   <title><%- title %></title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
+  <link href="/css/style.css" rel="stylesheet">
+
 </head>
 
 <body>
@@ -18,18 +20,20 @@
         <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-secondary text-decoration-none">
           Rakify Mall
         </a>
-  
+
         <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-          <li><a href="/admin/pages" class="nav-link px-2 text-white">Pages</a></li>
-          <li><a href="/admin/categories" class="nav-link px-2 text-white">Categories</a></li>
-          <li><a href="#" class="nav-link px-2 text-white">FAQs</a></li>
-          <li><a href="#" class="nav-link px-2 text-white">About</a></li>
+          <% pages.forEach(page=> { %>
+          <% if (page.slug == 'home') { %>
+          <li> <a href="/" class="nav-link px-2 text-white"><%= page.title %></a></li>
+          <% } else { %>
+          <li> <a href="<%= page.slug %>" class="nav-link px-2 text-white"><%= page.title %></a></li>
+          <% }}) %>
         </ul>
-  
+
         <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
           <input type="search" class="form-control form-control-dark" placeholder="Search...">
         </form>
-  
+
         <div class="text-end">
           <button type="button" class="btn btn-outline-light me-2">Login</button>
           <button type="button" class="btn btn-warning">Sign-up</button>
@@ -40,7 +44,15 @@
   <br>
 
   <div class='container'><%- messages('messages', locals) %>
-
-    <% if (error) {%>
-      <div class="alert alert-danger"><%= error %></div>
-  <% }%>
+    <div class="row">
+      <div class="col-xs-12 col-md-3">
+        <h3>Categories</h3>
+        <ul class="list-group">
+          <li class="list-group-item list-group-item-action"><a href="/products">All products</a></li>
+          <% categories.forEach((c)=>{ %>
+          <li class="list-group-item list-group-item-action"><a href="/products/<%= c.slug %>"><%= c.title %></a></li>
+          <% }) %>
+        </ul>
+      </div>
+      <div class="col-xs-12 col-md-1"></div>
+      <div class="col-xs-12 col-md-8">
