--- a/views/admin/edit_product.ejs
+++ b/views/admin/edit_product.ejs
@@ -1,19 +1,20 @@
 <%- include('../_layouts/adminheader') %>
 
-<h2 class = 'page-title'>Edit a product</h2>
-<a href = '/admin/products' class = 'btn btn-primary'>Back to all products</a>
+<h2 class='page-title'>Edit a product</h2>
+<a href='/admin/products' class='btn btn-primary'>Back to all products</a>
 <br><br>
 
-<form method = 'post' action = '/admin/products/edit-product/<%= product._id %>' enctype="multipart/form-data">
+<form method='post' action='/admin/products/edit-product/<%= product._id %>' enctype="multipart/form-data">
 
-    <div class = 'mb-3'>
-        <label for = '' class = 'form-level'>Title</label>
-        <input type = 'text' class='form-control' name = 'title' value = '<%= product.title %>' placeholder = 'Title'>
+    <div class='mb-3'>
+        <label for='' class='form-level'>Title</label>
+        <input type='text' class='form-control' name='title' value='<%= product.title %>' placeholder='Title'>
     </div>
 
-    <div class = 'mb-3'>
-        <label for = '' class = 'form-level'>Description</label>
-        <textarea name="description" class='form-control' cols="10" rows="4" placeholder="Description"><%= product.description %></textarea>
+    <div class='mb-3'>
+        <label for='' class='form-level'>Description</label>
+        <textarea name="description" class='form-control' cols="10" rows="4"
+            placeholder="Description"><%= product.description %></textarea>
     </div>
 
     <div class='mb-3'>
@@ -22,17 +23,27 @@
     </div>
 
     <input type='hidden' name="category" value="<%= product.category %>">
-    <input type='hidden' name="image" value="<%= product.image %>">
-    
+    <input type='hidden' name="images" value="<%= product.images %>">
+
     <div class='mb-3'>
-        <label for='' class='form-level'>Current Image: </label>
-        <img src ='/images/product_images/<%= product._id %>/<%= product.image %>' width="100" height="100">
-        <input type='file' class='form-control' name='product_images' id="imgInput" accept="image/*"
-            onchange="previewImage();">
+        <label class='form-level'>Uploaded Product Images: </label>
+        <%if (product.images.length===0){ %>
+            No pics Uploaded
+        <% } else { %>    
+        <% for(let i =0; i<product.images.length; i++){ %>
+        <img src='/images/product_images/<%= product._id %>/<%= product.images[i] %>' style="display: block;margin-left: auto;margin-right: auto;" width="100" height="100">
+        <a href="/admin/products/delete-image/<%= product.images[i] %>?id=<%= product._id %>" onclick="return confirm('Are you sure?')">delete</a>
+        <% }} %>
+        <br><br>
+        <label for='' class='form-level'>Select Images: </label><br>
+        <input type='file' class='form-control' name='newImages' id="imgInput" accept="image/*
+            onchange="previewImage();" multiple>
         <img src="#" id='imgPreview' alt="">
     </div>
     <button class='btn btn-outline-secondary' type='submit'>Submit</button>
 </form>
+
+<br><br>
 
 <script>
     previewImage = () => {
