--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -23,10 +23,10 @@
             <td>৳<%= product.price%></td>
             <td><%= product.category %></td>
             <td>
-                <% if (product.image === '') { %>
+                <% if (product.images.length === 0) { %>
                 <img src ='/images/noimage.png' width="100" height="100">   
                 <% } else { %>
-                    <img src ='/images/product_images/<%= product._id %>/<%= product.image %>' width="100" height="100">
+                    <img src ='/images/product_images/<%= product._id %>/<%= product.images[0] %>' width="100" height="100">
                     <% } %>
             </td>
             <td><a href="/admin/products/edit-product/<%= product._id %>">Edit</a></td>
