--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,21 +1,61 @@
 img.pimage {
-width: 150px;
-height: 150px;
+    width: 150px;
+    height: 150px;
 }
+
 img.spi {
     width: 100%;
 }
+
+img.cpi {
+    width: 100px;
+}
+
 a.pa {
     display: inline-block;
     height: 160px;
 }
+
 .row .products .p {
     background-color: aqua;
     margin-top: 20px;
     margin-bottom: 20px;
 }
+
 ul.gallery li {
     display: inline-block;
     margin: 20px;
     list-style: none;
+}
+
+table.alignmiddle td {
+    vertical-align: middle !important;
+}
+
+.ajaxbg {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: rqba(255, 255, 255, .8);
+    z-index: 2;
+    display: none;
+}
+
+.ajaxinner {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
+
+.pp {
+    position: absolute;
+    left: -3000px;
+}
+
+.alert-error {
+    color: #842029;
+    background-color: #f8d7da;
+    border-color: #f5c2c7;
 }
