--- a/views/_layouts/adminheader.ejs
+++ b/views/_layouts/adminheader.ejs
@@ -7,6 +7,7 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+  <link href="/css/style.css" rel="stylesheet">
   <title>Admin (Restricted Area)</title>
 </head>
 
@@ -30,10 +31,10 @@
           <input type="search" class="form-control form-control-dark" placeholder="Search...">
         </form>
   
-        <div class="text-end">
-          <button type="button" class="btn btn-outline-light me-2">Login</button>
-          <button type="button" class="btn btn-warning">Sign-up</button>
+        <div class="text-end btn btn-outline-light me-2">
+          <a href="/users/logout">Logout</a>
         </div>
+
       </div>
     </div>
   </header>
