--- a/views/_layouts/header.ejs
+++ b/views/_layouts/header.ejs
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title><%- title %></title>
+
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
   <link href="/css/style.css" rel="stylesheet">
@@ -13,6 +15,14 @@
 </head>
 
 <body>
+  <!-- Paypal loading menu starts -->
+  <div class="ajaxbg">
+    <div class="ajaxinner">
+      <h3>You are now being redirected to paypal...</h3>
+      <img src="/images/ajax-loader.gif">
+    </div>
+  </div>
+  <!-- Paypal loading menu ends -->
 
   <header class="p-3 bg-dark text-white">
     <div class="container">
@@ -29,14 +39,33 @@
           <li> <a href="<%= page.slug %>" class="nav-link px-2 text-white"><%= page.title %></a></li>
           <% }}) %>
         </ul>
-
+        <% if (user && user.admin==1) { %>
+        <div class="text-end btn btn-outline-light me-2">
+          <a href="/users/logout">Logout</a> || <a href="admin/pages"> Admin Area</a>
+        </div>
+        <% } else if (user) { %>
+        <div class="text-end btn btn-outline-light me-2">Hi, <%= user.username %>
+            (<a href="/users/logout">Logout</a>)
+        </div>
+        <% } else { %>
+        <div class="text-end btn btn-outline-light me-2"><a href="/users/login"> Login</a> ||
+          <a href="/users/register"> Register</a>
+        </div>
+        <% } %>
         <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
           <input type="search" class="form-control form-control-dark" placeholder="Search...">
         </form>
 
-        <div class="text-end">
-          <button type="button" class="btn btn-outline-light me-2">Login</button>
-          <button type="button" class="btn btn-warning">Sign-up</button>
+        <div class="'btn btn-warning">
+          <ul class="nav  navbar-right col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+            <li> <a href="/cart/checkout" class="nav-link px-2 text-white">My Cart (
+                <% if(typeof cart!='undefined'){ %>
+                <%= cart.length %>
+                <% } else { %>
+                0
+                <% } %>
+                )</a></li>
+          </ul>
         </div>
       </div>
     </div>
@@ -44,6 +73,9 @@
   <br>
 
   <div class='container'><%- messages('messages', locals) %>
+    <% if (error) {%>
+    <div class="alert alert-danger"><%= error %></div>
+    <% }%>
     <div class="row">
       <div class="col-xs-12 col-md-3">
         <h3>Categories</h3>
