--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -5,7 +5,7 @@
 <br><br>
 
 <% if (count>0) { %>
-<table class='table table-striped'>
+<table class='table table-striped alignmiddle'>
     <thead class='thead-light'>
         <tr class='home'>
             <th>Product</th>
