--- a/views/product.ejs
+++ b/views/product.ejs
@@ -10,16 +10,20 @@
     <div class="col-xs-12 col-md-7">
         <p><%= product.description %></p>
         <p>৳<%= product.price %></p>
+        <% if (loggedIn) { %>
         <p><a href="/cart/add/<%= product.slug %>">Add to cart</a></p>
+        <% } else { %>
+        <p>You must be logged in to purchase items.</p>
+        <% } %>
     </div>
     <div class="col-xs-12">
         <ul class="gallery">
             <% if(product.images.length>1) {%>
-            <p><b>Click on image to enlarge</b></p>   
+            <p><b>Click on image to enlarge</b></p>
             <% product.images.slice(1).forEach((image)=>{ %>
             <li>
-                <a data-fancybox="gallery" href="/images/product_images/<%= product._id %>/<%= image %>"><img class="pimage"
-                        src="/images/product_images/<%= product._id %>/<%= image %>" alt=""></a>
+                <a data-fancybox="gallery" href="/images/product_images/<%= product._id %>/<%= image %>"><img
+                        class="pimage" src="/images/product_images/<%= product._id %>/<%= image %>" alt=""></a>
             </li>
             <% })} else { %>
             <br>
