--- a/views/_layouts/header.ejs
+++ b/views/_layouts/header.ejs
@@ -41,14 +41,14 @@
         </ul>
         <% if (user && user.admin==1) { %>
         <div class="text-end btn btn-outline-light me-2">
-          <a href="/users/logout">Logout</a> || <a href="/admin/pages"> Admin Area</a>
+          <a href="/users/logout">Logout</a> | <a href="/admin/pages"> Admin Area</a>
         </div>
         <% } else if (user) { %>
         <div class="text-end btn btn-outline-light me-2">Hi, <%= user.username %>
             (<a href="/users/logout">Logout</a>)
         </div>
         <% } else { %>
-        <div class="text-end btn btn-outline-light me-2"><a href="/users/login"> Login</a> ||
+        <div class="text-end btn btn-outline-light me-2"><a href="/users/login"> Login</a> |
           <a href="/users/register"> Register</a>
         </div>
         <% } %>
