--- a/views/_layouts/header.ejs
+++ b/views/_layouts/header.ejs
@@ -10,6 +10,7 @@
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
   <link href="/css/style.css" rel="stylesheet">
 
 </head>
@@ -45,7 +46,7 @@
         </div>
         <% } else if (user) { %>
         <div class="text-end btn btn-outline-light me-2">Hi, <%= user.username %>
-            (<a href="/users/logout">Logout</a>)
+          (<a href="/users/logout">Logout</a>) | <a href="/user/profile">Profile</a>
         </div>
         <% } else { %>
         <div class="text-end btn btn-outline-light me-2"><a href="/users/login"> Login</a> |
@@ -55,7 +56,7 @@
         <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
           <input type="search" class="form-control form-control-dark" placeholder="Search...">
         </form>
-
+        <% if (user) { %>
         <div class="'btn btn-warning">
           <ul class="nav  navbar-right col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
             <li> <a href="/cart/checkout" class="nav-link px-2 text-white">My Cart (
@@ -67,6 +68,7 @@
                 )</a></li>
           </ul>
         </div>
+        <% } %>
       </div>
     </div>
   </header>
