--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,20 +1,16 @@
 <%- include('_layouts/header') %>
 
-<h1><%= title %></h1>
-
+<h1 class="page-title"><%= title %></h1>
 <form method="post" action="/users/login">
-    
     <div class="form-group">
-        <label>Username</label>
+        <b><label>Username: </label></b>
         <input type="text" name="username" class="form-control" placeholder="Username">
     </div>
-
     <div class="form-group">
-        <label>Password</label>
-        <input type="password" name="password" class="form-control"  placeholder="Password">
+        <b><label>Password: </label></b><i class="fas fa-eye" id="togglePassword"></i>
+        <input type="password" id="password" name="password" class="form-control"  placeholder="Password">
     </div>
-
-    <button type="submit" class="btn btn-primary btn-block">Log in</button>
+<br>
+     <button type="submit" class="btn btn-primary btn-block">Log in</button>
 </form>
-
 <%- include('_layouts/footer') %>
