--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,24 +1,54 @@
 <%- include('_layouts/header') %>
 
-<h1><%= title %></h1>
+<h1 class="page-title"><%= title %></h1>
 
 <form method='post' action="/users/register">
+    <table class="table table-borderless">
+        <th>
+            <div class="form-group">
+                <label for="username">Username:* </label>
+                <input type="text" name="username" class="form-control" placeholder="Username" />
+            </div>
+        </th>
+        <th>
+            <div class="form-group">
+                <label for="email">Email:* </label>
+                <input type="email" name="email" class="form-control" placeholder="Email" />
+            </div>
+        </th>
+    </table>
     <div class="form-group">
-        <label for="username">Username</label>
-        <input type="text" name="username" class="form-control" placeholder="Username" />
+        <b><label for="password">Password:* </label></b>
+        <i class="fas fa-eye" id="togglePassword"></i>
+        <input type="password" id="password" name="password" class="form-control"
+            placeholder="Password" />
     </div>
     <div class="form-group">
-        <label for="email">Email</label>
-        <input type="email" name="email" class="form-control" placeholder="Email" />
+        <b><label for="password2">Confirm Password:* </label></b>
+        <i class="fas fa-eye" id="togglePassword2"></i>
+        <input type="password" id="password2" name="password2" class="form-control" placeholder="Confirm Password" />
     </div>
-    <div class="form-group">
-        <label for="password">Password</label>
-        <input type="password" name="password" class="form-control" placeholder="Password" />
-    </div>
-    <div class="form-group">
-        <label for="password2">Confirm Password</label>
-        <input type="password" name="password2" class="form-control" placeholder="Confirm Password" />
-    </div>
+<br>
+    <table class="table table-borderless">
+        <th>
+            <div class="form-group">
+                <label for="First Name">First Name: </label>
+                <input type="text" name="fname" class="form-control" placeholder="Input First Name" />
+            </div>
+        </th>
+        <th>
+            <div class="form-group">
+                <label for="Last Name">Last Name: </label>
+                <input type="text" name="lname" class="form-control" placeholder="Input Last Name" />
+            </div>
+        </th>
+        <th>
+            <div class="form-group">
+                <label for="Phone Number">Phone Number: </label>
+                <input type="text" name="pn" class="form-control" placeholder="Phone Number" />
+            </div>
+        </th>
+    </table>
     <button type="submit" class="btn btn-primary btn-block">
         Register
     </button>
