--- a/views/_layouts/adminheader.ejs
+++ b/views/_layouts/adminheader.ejs
@@ -8,7 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
   <link href="/css/style.css" rel="stylesheet">
-  <title>Admin (Restricted Area)</title>
+  <title>(Restricted Area)</title>
 </head>
 
 <body>
@@ -21,10 +21,10 @@
         </a>
   
         <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-          <li><a href="/admin/pages" class="nav-link px-2 text-white">Pages</a></li>
-          <li><a href="/admin/categories" class="nav-link px-2 text-white">Categories</a></li>
+        <li><a href="/admin/pages" class="nav-link px-2 text-white">Pages*</a></li>
+          <li><a href="/admin/categories" class="nav-link px-2 text-white">Categories*</a></li>
           <li><a href="/admin/products" class="nav-link px-2 text-white">Products</a></li>
-          <li><a href="#" class="nav-link px-2 text-white">About</a></li>
+          <li><a href="#" class="nav-link px-2 text-white">About*</a></li>
         </ul>
   
         <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
