--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -31,6 +31,8 @@
 <div class="card text-dark bg-light mb-3" style="max-width: 50rem;">
     <div class="card-header">User Information: </div>
     <div class="card-body">
+        <b class="card-title" style="display: inline; float: left;">User Type: </b>
+        <p class="card-text text-center"><%= (user.admin==0)? "Regular Buyer" : "Seller" %></p>
         <b class="card-title" style="display: inline; float: left;">Profile registered at: </b>
         <p class="card-text text-center"><%= user.createdAt %></p>
         <b class="card-title" style="display: inline; float: left;">Last profile updated at: </b>
@@ -39,14 +41,24 @@
 </div>
 
 <div class="card text-dark bg-light mb-3" style="max-width: 50rem;">
-    <div class="card-header">Account Settings: </div>
+    <div class="card-header">Other Settings: </div>
     <div class="card-body">
         <ul class="list-group">
             <li style="list-style-type: circle;">
                 <a href="/user/change-password">Change Password</a>
             </li>
             <li style="list-style-type: circle;">
-                <a href="/user/change-type"><%= (user.admin==0)? "Be Seller" : "Be Buyer" %></a>
+                <form action="" method="post">
+                    <input type="submit" style="background: none!important;
+                        border: none;
+                        padding: 0!important;
+                        /*optional*/
+                        font-family: arial, sans-serif;
+                        /*input has OS specific font-family*/
+                        color: #0d6efd;
+                        text-decoration: underline;
+                        cursor: pointer;" value="<%= (user.admin==0)? "Be Seller" : "Be Buyer" %>">
+                </form>
             </li>
         </ul>
     </div>
