--- a/views/_layouts/header.ejs
+++ b/views/_layouts/header.ejs
@@ -7,8 +7,9 @@
 
   <title><%- title %></title>
 
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
   <link href="/css/style.css" rel="stylesheet">
@@ -76,13 +77,42 @@
       </div>
     </div>
   </header>
-  <div class="h5 card-title card-header">Categories</div>
-  <div class="card-body">
-    <a href="/products" class="card-link">All products</a>
-    <% categories.forEach((c)=>{ %>
-    <a href="/products/<%= c.slug %>" class="card-link"><%= c.title %></a>
-    <% }) %>
-  </div>
+
+
+<!--
+Dropdown menu for categories
+ -->
+
+  <span class="dropdown">
+    <a class="btn btn-primary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+      Categories
+    </a>
+  
+    <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+      <li><a href="/products" class="dropdown-item">All products</a></li>
+      <% categories.forEach((c)=>{ %>
+        <li><a href="/products/<%= c.slug %>" class="dropdown-item"><%= c.title %></a></li>
+        <% }) %>
+    </ul>
+  </span>
+
+<!--
+Dropdown menu for shop name
+ -->
+
+  <span class="dropdown">
+    <a class="btn btn-primary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+      Shops
+    </a>
+  
+    <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+      <li><a href="/products/shop/Admin" class="dropdown-item">Admin products</a></li>
+      <% seller.forEach((s)=>{ %>
+        <li><a href="/products/shop/<%= s.username %>" class="dropdown-item"><%= s.username %></a></li>
+        <% }) %>
+    </ul>
+  </span>
+
 
   <br>
 
