--- a/views/admin/edit_product.ejs
+++ b/views/admin/edit_product.ejs
@@ -1,8 +1,9 @@
 <%- include('../_layouts/adminheader') %>
 
-<h2 class='page-title'>Edit a product</h2>
-<a href='/admin/products' class='btn btn-primary'>Back to all products</a>
-<br><br>
+<div class="card" style="width: 70rem;">
+    <div class="card-body">
+      <h2 class="card-title"><%= title %></h2>
+      <a href='/admin/products' class='btn btn-primary'>Back to all products</a>
 
 <form method='post' action='/admin/products/edit-product/<%= product._id %>' enctype="multipart/form-data">
 
@@ -31,8 +32,10 @@
         <label class='form-level'>Uploaded Product Images: </label>
         <%if (product.images.length===0){ %>
             No pics Uploaded
-        <% } else { %>    
-        <% for(let i =0; i<product.images.length; i++){ %>
+        <% } else if(product.images.length==1){ %>
+            <img src='/images/product_images/<%= product._id %>/<%= product.images[0] %>' style="display: block;margin-left: auto;margin-right: auto;" width="100" height="100">
+<% } else { %>                
+        <% for(let i=0; i<product.images.length; i++){ %>
         <img src='/images/product_images/<%= product._id %>/<%= product.images[i] %>' style="display: block;margin-left: auto;margin-right: auto;" width="100" height="100">
         <a href="/admin/products/delete-image/<%= product.images[i] %>?id=<%= product._id %>" onclick="return confirm('Are you sure?')">delete</a>
         <% }} %>
@@ -44,7 +47,7 @@
     </div>
     <button class='btn btn-outline-secondary' type='submit'>Submit</button>
 </form>
-
+    </div></div>
 <br><br>
 
 <script>
