--- a/views/all_products.ejs
+++ b/views/all_products.ejs
@@ -1,21 +1,46 @@
 <%- include('_layouts/header') %>
 
 
-<div class="h3 card-header">Recently Added Products</div>
+<div class="h3 card-header">Latest Products</div>
 <div class="row">
     <% products.forEach((product)=>{ %>
     <div class="col-sm-4">
         <a class="card-link" href="/products/<%= product.category %>/<%= product.slug %>">
-            <img class="card-img-top" style="width: 10rem;" src="/images/product_images/<%= product._id %>/<%= product.images[0] %>" alt="">
+            <img class="card-img-top" style="width: 10rem; height: 10rem;"
+                src="/images/product_images/<%= product._id %>/<%= product.images[0] %>" alt="">
         </a>
         <div class="card-body">
-            <p class="card-text"><%= product.title %></p>
-            <p class="card-text">৳<%= product.price %></p>
-            <a class="card-link" href="/products/<%= product.category %>/<%= product.slug %>">View Details</a>
+            <span class="h6"><%= product.title %></span> <span class="badge badge-primary">৳
+                <%= product.price %></span><br>
+            <a class="vd" href="/products/<%= product.category %>/<%= product.slug %>">View Details</a>
         </div>
     </div>
     <% }) %>
-
 </div>
+
+<!-- Pagination begins -->
+<nav aria-label="Page navigation example">
+    <ul class="pagination justify-content-end">
+        <% if(first>1) { %>
+        <li class="page-item"><a class="page-link" href="/products?page=<%= first-1 %>">Previous</a></li>
+        <% } else { %>
+        <li class="page-item disabled"><a class="page-link" href="/products?page=<%= first-1 %>">Previous</a></li>
+        <% } %>
+        <% if(max>first) { %>
+        <li class="page-item"><a class="page-link" href="/products?page=<%= first+1 %>"><%= first+1 %></a></li>
+        <% } %>
+        <% if(max>first+1) { %>
+        <li class="page-item"><a class="page-link" href="/products?page=<%= first+2 %>"><%= first+2 %></a></li>
+        <% } %>
+        <% if(max>first+2) { %>
+        <li class="page-item"><a class="page-link" href="/products?page=<%= first+3 %>"><%= first+3 %></a></li>
+        <% } %>
+        <% if(max>first) { %>
+        <li class="page-item"><a class="page-link" href="/products?page=<%= first+1 %>">Next</a></li>
+        <% } else { %>
+        <li class="page-item disabled"><a class="page-link" href="/products?page=<%= first+1 %>">Next</a></li>
+        <% } %>
+    </ul>
+</nav>
 
 <%- include('_layouts/footer') %>
