--- a/views/product.ejs
+++ b/views/product.ejs
@@ -1,25 +1,26 @@
 <%- include('_layouts/header') %>
 
-<div class="row">
-    <h1 class="page-header"><%= product.title %></h1>
-    <hr>
+<div class="card">
     <div class="col-xs-12 col-md-5">
-        <img class="spi" src="/images/product_images/<%= product._id %>/<%= product.images[0] %>" alt="">
-        <br>
+    <img class="card-img-top" src="/images/product_images/<%= product._id %>/<%= product.images[0] %>" alt="">
     </div>
+    <h1 class="card-header"><%= product.title %></h1>
     <div class="col-xs-12 col-md-7">
-        <p><%= product.description %></p>
-        <p>৳<%= product.price %></p>
+        <p><b>Description: </b><%= product.description %></p>
+        <p><b>Price: </b>৳<%= product.price %></p>
+        <p><b>Seller: </b><a class="card-link" href="/products/shop/<%= product.seller %>"><%= product.seller %></a></p>
         <% if (loggedIn) { %>
-        <p><a href="/cart/add/<%= product.slug %>">Add to cart</a></p>
+        <p><a class="btn btn-primary btn-lg btn-block" href="/cart/add/<%= product.slug %>">Add to cart</a></p>
         <% } else { %>
-        <p>You must be logged in to purchase items.</p>
+        <button type="button" class="btn btn-lg btn-primary btn-block" disabled>Add to cart</button>    
+        <p style="color: red;">You must be logged in to purchase this item.</p>
         <% } %>
+        
+        <p><b>Product Gallary:</b></p>
     </div>
-    <div class="col-xs-12">
+        <div class="col-xs-12">
         <ul class="gallery">
             <% if(product.images.length>1) {%>
-            <p><b>Click on image to enlarge</b></p>
             <% product.images.slice(1).forEach((image)=>{ %>
             <li>
                 <a data-fancybox="gallery" href="/images/product_images/<%= product._id %>/<%= image %>"><img
@@ -27,7 +28,7 @@
             </li>
             <% })} else { %>
             <br>
-            <p>No more images available right now</p>
+            <p style="color:gray">No more images available right now for this product.</p>
             <% } %>
         </ul>
     </div>
