--- a/views/admin/edit_product.ejs
+++ b/views/admin/edit_product.ejs
@@ -2,52 +2,59 @@
 
 <div class="card" style="width: 70rem;">
     <div class="card-body">
-      <h2 class="card-title"><%= title %></h2>
-      <a href='/admin/products' class='btn btn-primary'>Back to all products</a>
+        <h2 class="card-title"><%= title %></h2>
+        <a href='/admin/products' class='btn btn-primary'>Back to all products</a>
 
-<form method='post' action='/admin/products/edit-product/<%= product._id %>' enctype="multipart/form-data">
+        <form method='post' action='/admin/products/edit-product/<%= product._id %>' enctype="multipart/form-data">
 
-    <input type="hidden" name="seller" value="<%= user.username %>">
+            <input type="hidden" name="seller" value="<%= user.username %>">
 
-    <div class='mb-3'>
-        <label for='' class='form-level'>Title</label>
-        <input type='text' class='form-control' name='title' value='<%= product.title %>' placeholder='Title'>
+            <div class='mb-3'>
+                <label for='' class='form-level'>Title</label>
+                <input type='text' class='form-control' name='title' value='<%= product.title %>' placeholder='Title'>
+            </div>
+
+            <div class='mb-3'>
+                <label for='' class='form-level'>Description</label>
+                <textarea name="description" class='form-control' cols="10" rows="4"
+                    placeholder="Description"><%= product.description %></textarea>
+            </div>
+
+            <div class='mb-3'>
+                <label for='' class='form-level'>Price</label>
+                <input type='number' min='1' class='form-control' name='price' value='<%= product.price %>'
+                    placeholder='৳'>
+            </div>
+
+            <input type='hidden' name="category" value="<%= product.category %>">
+            <input type='hidden' name="images" value="<%= product.images %>">
+
+            <div class='mb-3'>
+                <label class='form-level'>Uploaded Product Images: </label>
+                <div class="card-header">
+                <%if (product.images.length===0){ %>
+                No pics Uploaded
+                <% } else if(product.images.length==1){ %>
+                <img src='/images/product_images/<%= product._id %>/<%= product.images[0] %>'
+                    style="display: block;margin-left: auto;margin-right: auto;" width="200" height="200">
+                <% } else { %>
+                <% for(let i=0; i<product.images.length; i++){ %>
+                <img src='/images/product_images/<%= product._id %>/<%= product.images[i] %>'
+                    class="card-image-top" width="200" height="200">
+                <a class="badge badge-danger" href="/admin/products/delete-image/<%= product.images[i] %>?id=<%= product._id %>"
+                    onclick="return confirm('Are you sure?')">DELETE</a></span>
+                <% }} %>
+                <br><br>
+                <label for='' class='form-level'>Select Images: </label><br>
+                <input type='file' class='form-control' name='newImages' id="imgInput" accept="image/*
+            onchange=" previewImage();" multiple>
+                <img src="#" id='imgPreview' alt="">
+                </div>
+            </div>
+            <button class='btn btn-outline-secondary' type='submit'>Submit</button>
+        </form>
     </div>
-
-    <div class='mb-3'>
-        <label for='' class='form-level'>Description</label>
-        <textarea name="description" class='form-control' cols="10" rows="4"
-            placeholder="Description"><%= product.description %></textarea>
-    </div>
-
-    <div class='mb-3'>
-        <label for='' class='form-level'>Price</label>
-        <input type='number' min='1' class='form-control' name='price' value='<%= product.price %>' placeholder='৳'>
-    </div>
-
-    <input type='hidden' name="category" value="<%= product.category %>">
-    <input type='hidden' name="images" value="<%= product.images %>">
-
-    <div class='mb-3'>
-        <label class='form-level'>Uploaded Product Images: </label>
-        <%if (product.images.length===0){ %>
-            No pics Uploaded
-        <% } else if(product.images.length==1){ %>
-            <img src='/images/product_images/<%= product._id %>/<%= product.images[0] %>' style="display: block;margin-left: auto;margin-right: auto;" width="100" height="100">
-<% } else { %>                
-        <% for(let i=0; i<product.images.length; i++){ %>
-        <img src='/images/product_images/<%= product._id %>/<%= product.images[i] %>' style="display: block;margin-left: auto;margin-right: auto;" width="100" height="100">
-        <a href="/admin/products/delete-image/<%= product.images[i] %>?id=<%= product._id %>" onclick="return confirm('Are you sure?')">delete</a>
-        <% }} %>
-        <br><br>
-        <label for='' class='form-level'>Select Images: </label><br>
-        <input type='file' class='form-control' name='newImages' id="imgInput" accept="image/*
-            onchange="previewImage();" multiple>
-        <img src="#" id='imgPreview' alt="">
-    </div>
-    <button class='btn btn-outline-secondary' type='submit'>Submit</button>
-</form>
-    </div></div>
+</div>
 <br><br>
 
 <script>
