--- a/views/all_products.ejs
+++ b/views/all_products.ejs
@@ -21,24 +21,24 @@
 <!-- Pagination begins -->
 <nav aria-label="Page navigation example">
     <ul class="pagination justify-content-end">
-        <% if(first>1) { %>
-        <li class="page-item"><a class="page-link" href="/products?page=<%= first-1 %>">Previous</a></li>
+        <!-- previous link -->
+        <% if(page>1) { %>
+        <li class="page-item"><a class="page-link" href="/products?page=<%= page-1 %>">Previous</a></li>
         <% } else { %>
-        <li class="page-item disabled"><a class="page-link" href="/products?page=<%= first-1 %>">Previous</a></li>
+        <li class="page-item disabled"><a class="page-link" href="/products?page=<%= page-1 %>">Previous</a></li>
         <% } %>
-        <% if(max>first) { %>
-        <li class="page-item"><a class="page-link" href="/products?page=<%= first+1 %>"><%= first+1 %></a></li>
-        <% } %>
-        <% if(max>first+1) { %>
-        <li class="page-item"><a class="page-link" href="/products?page=<%= first+2 %>"><%= first+2 %></a></li>
-        <% } %>
-        <% if(max>first+2) { %>
-        <li class="page-item"><a class="page-link" href="/products?page=<%= first+3 %>"><%= first+3 %></a></li>
-        <% } %>
-        <% if(max>first) { %>
-        <li class="page-item"><a class="page-link" href="/products?page=<%= first+1 %>">Next</a></li>
+        <!-- links before current page     -->
+        <% for(let i=startLink;i<=endLink;i++) { %>
+        <% if(i==page) { %>
+        <li class="page-item active"><a class="page-link" href="/products?page=<%= i %>"><%= i %></a></li>
         <% } else { %>
-        <li class="page-item disabled"><a class="page-link" href="/products?page=<%= first+1 %>">Next</a></li>
+        <li class="page-item"><a class="page-link" href="/products?page=<%= i %>"><%= i %></a></li>
+        <% }} %>
+        <!-- next  link    -->
+        <% if(max>page) { %>
+        <li class="page-item"><a class="page-link" href="/products?page=<%= page+1 %>">Next</a></li>
+        <% } else { %>
+        <li class="page-item disabled"><a class="page-link" href="/products?page=<%= page+1 %>">Next</a></li>
         <% } %>
     </ul>
 </nav>
