--- a/views/login.ejs
+++ b/views/login.ejs
@@ -13,4 +13,6 @@
 <br>
      <button type="submit" class="btn btn-primary btn-block">Log in</button>
 </form>
+<p class="lead mt-4"><a class="card-link" href="/users/register">Don't Have An Account? </a></p>
+<p class="lead mt-4"><a class="card-link" href="/user/forgot-password">Forgot Password? </a></p>
 <%- include('_layouts/footer') %>
