--- a/views/register.ejs
+++ b/views/register.ejs
@@ -53,7 +53,7 @@
         Register
     </button>
 </form>
-<p class="lead mt-4">Have An Account? <a href="/users/login">Login</a></p>
+<p class="lead mt-4"><a class="card-link" href="/users/login">Already Registered? </a></p>
 </div>
 
 <%- include('_layouts/footer') %>
