--- a/views/product.ejs
+++ b/views/product.ejs
@@ -2,7 +2,7 @@
 
 <div class="card">
     <div class="col-xs-12 col-md-5">
-    <img class="card-img-top" src="/images/product_images/<%= product._id %>/<%= product.images[0] %>" alt="">
+    <img class="card-img-top" src="<%= product.images[0] %>" alt="">
     </div>
     <h1 class="card-header"><%= product.title %></h1>
     <div class="col-xs-12 col-md-7">
