--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -31,7 +31,7 @@
                 <% if (product.images.length === 0) { %>
                 <img src='/images/noimage.png' width="100" height="100">
                 <% } else { %>
-                <img src='/images/product_images/<%= product._id %>/<%= product.images[0] %>' width="100" height="100">
+                <img src='<%= product.images[0] %>' width="100" height="100">
                 <% } %>
             </td>
             <td>
